GPv3: Drawing issue when single point curve has cyclic property set #120559

Closed
opened 2024-04-12 11:07:03 +02:00 by Pratik Borhade · 4 comments
Member

System Information
Operating system: Windows-10-10.0.22631-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3050 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 551.76

Blender Version
Broken: 4.2, 98986c65625b1171f281eaaeb7b3c0a296e3da04
Worked: some older build

Short description of error

Drawing artefact if single point curve is set to cyclic

Exact steps for others to reproduce the error

  • Open attached file
  • Select curve and alt c to set cyclic
**System Information** Operating system: Windows-10-10.0.22631-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3050 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 551.76 **Blender Version** Broken: 4.2, `98986c65625b1171f281eaaeb7b3c0a296e3da04` Worked: some older build **Short description of error** Drawing artefact if single point curve is set to cyclic **Exact steps for others to reproduce the error** - Open attached file - Select curve and `alt c` to set cyclic
Pratik Borhade added the
Status
Needs Triage
Priority
Normal
Type
Report
Module
Grease Pencil
labels 2024-04-12 11:07:15 +02:00
Pratik Borhade added this to the Grease Pencil project 2024-04-12 11:07:20 +02:00
Author
Member

Caused by ca0b02aa96
Which also re-introduces this issue: #119714
@filedescriptor 👋

Caused by ca0b02aa96d91cd4ba7b68ce2436e10656c8a428 Which also re-introduces this issue: #119714 @filedescriptor 👋
Member

Thanks, will check.

Thanks, will check.
Member

turns our either 2, 3 or 0 points as threshold won't work, just has to be greater than 1 😆

turns our either 2, 3 or 0 points as threshold won't work, just has to be greater than 1 😆
Member

@ChengduLittleA Not sure what you mean 😅

@ChengduLittleA Not sure what you mean 😅
Falk David added
Status
Confirmed
and removed
Status
Needs Triage
labels 2024-04-12 12:44:38 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-04-12 13:20:09 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#120559
No description provided.