Fix #120559: GPv3: Rendering issue if single point curve is set to cyclic

Caused by https://projects.blender.org/blender/blender/commit/ca0b02aa96d91cd4ba7b68ce2436e10656c8a428.
The `points.size() > 1` was added because we can't access
`lengths[points.size() - 1]` if the curve has a single point.
The fix just makes sure we default to a `u` value of `0.0f`
for single point cyclic curves.

Pull Request: https://projects.blender.org/blender/blender/pulls/120565